--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
 
     <section class="content-section">
       <div class="container">
-        <div class="image-placeholder"></div>
+<div class="image-placeholder">
+    <img src="nusa dew - about us.jpg" alt="Beberapa botol minuman Nusa Dew" class="img-fluid">
+</div>        
         <div class="text-content">
           <p>Nusa Dew hadir sebagai jembatan antara tradisi kearifan lokal Indonesia dengan gaya hidup modern yang sehat. Kami percaya bahwa kesegaran tidak harus mengorbankan kualitas dan keautentikan bahan. Melalui minuman sparkling botani kami, setiap tegukan menghadirkan sensasi berkarbonasi yang menyegarkan, diperkaya dengan rempah dan botani khas Nusantara.</p>
             
@@ -271,4 +273,5 @@
       });
     </script>
   </body>
+
 </html>
