--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
       <div class="container">
-        <a class="navbar-brand text-dark **fw-bold fs-3 me-5**" href="#">
+        <a class="navbar-brand text-dark fw-bold fs-3 me-5" href="#">
           LOGO
         </a>
 
@@ -34,19 +34,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link **text-dark px-3**" href="#">Menu 1</a>
+              <a class="nav-link text-dark px-3" href="#">Menu 1</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link **text-dark px-3**" href="#">Menu 2</a>
+              <a class="nav-link text-dark px-3" href="#">Menu 2</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link **text-dark px-3**" href="#">Menu 3</a>
+              <a class="nav-link text-dark px-3" href="#">Menu 3</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link **text-dark px-3**" href="#">Menu 4</a>
+              <a class="nav-link text-dark px-3" href="#">Menu 4</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link **text-dark px-3**" href="#">Menu 5</a>
+              <a class="nav-link text-dark px-3" href="#">Menu 5</a>
             </li>
           </ul>
 
@@ -56,13 +56,13 @@
             </form>
 
             <div class="d-flex">
-              <button class="btn btn-outline-secondary rounded-circle **p-0**" style="width: 35px; height: 35px; line-height: 35px;">
+              <button class="btn btn-outline-secondary rounded-circle p-0" style="width: 35px; height: 35px; line-height: 35px;">
                 <i class="fas fa-user"></i>
               </button>
-              <button class="btn btn-outline-secondary rounded-circle **ms-2 p-0**" style="width: 35px; height: 35px; line-height: 35px;">
+              <button class="btn btn-outline-secondary rounded-circle ms-2 p-0" style="width: 35px; height: 35px; line-height: 35px;">
                 <i class="fas fa-shopping-cart"></i>
               </button>
-              <button class="btn btn-outline-secondary rounded-circle **ms-2 p-0**" style="width: 35px; height: 35px; line-height: 35px;">
+              <button class="btn btn-outline-secondary rounded-circle ms-2 p-0" style="width: 35px; height: 35px; line-height: 35px;">
                 <i class="fas fa-search"></i>
               </button>
             </div>
@@ -86,9 +86,9 @@
 
     <section class="content-section">
       <div class="container">
-<div class="image-placeholder">
-    <img src="nusa dew - about us.jpg" alt="Beberapa botol minuman Nusa Dew" class="img-fluid">
-</div>        
+        <div class="image-placeholder">
+          <img src="nusa dew - about us.jpg" alt="Beberapa botol minuman Nusa Dew" class="img-fluid">
+        </div>
         <div class="text-content">
           <p>Nusa Dew hadir sebagai jembatan antara tradisi kearifan lokal Indonesia dengan gaya hidup modern yang sehat. Kami percaya bahwa kesegaran tidak harus mengorbankan kualitas dan keautentikan bahan. Melalui minuman sparkling botani kami, setiap tegukan menghadirkan sensasi berkarbonasi yang menyegarkan, diperkaya dengan rempah dan botani khas Nusantara.</p>
             
@@ -124,7 +124,9 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <div class="feature-image"></div>
+            <div class="feature-image">
+              <img src="nusa dew - about us.jpg" alt="Minuman Nusa Dew" class="img-fluid">
+            </div>
           </div>
         </div>
       </div>
@@ -134,7 +136,9 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6 order-lg-1 order-2">
-            <div class="feature-image"></div>
+            <div class="feature-image">
+              <img src="nusa dew - about us.jpg" alt="Minuman Nusa Dew" class="img-fluid">
+            </div>
           </div>
           <div class="col-lg-6 order-lg-2 order-1 mb-4 mb-lg-0">
             <div class="feature-box">
@@ -273,5 +277,4 @@
       });
     </script>
   </body>
-
 </html>
